chore: rebrand platform to 삐뚜루빠뚜루
