# pp-backend/docs/swagger.json
@@ -5,13 +5,13 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "PittuRu 게임 플랫폼 REST API 서버",
-        "title": "PittuRu API",
+        "description": "삐뚜루빠뚜루 게임 플랫폼 REST API 서버",
+        "title": "삐뚜루빠뚜루 API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "PittuRu Team",
-            "url": "https://pitturu.com",
-            "email": "support@pitturu.com"
+            "name": "삐뚜루빠뚜루 팀",
+            "url": "https://ppituruppaturu.com",
+            "email": "support@ppituruppaturu.com"
         },
         "license": {
             "name": "Apache 2.0",
